--- a/ride/templates/login/base.html
+++ b/ride/templates/login/base.html
@@ -38,6 +38,9 @@
         <div class="collapse navbar-collapse" id="my-nav">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/index/">index</a></li>
+              <li class="active"><a href="/Driver/">Driver</a></li>
+              <a class="navbar-brand" href="#">⇋</a >
+              <li class="active"><a href="/Passenger/">Passenger</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
               {% if request.session.is_login %}
