--- a/ride/templates/login/index.html
+++ b/ride/templates/login/index.html
@@ -5,6 +5,12 @@
 {% block content %}
     {% if request.session.is_login %}
     <h1>Hello,{{ request.session.user_name }}！Welcome back！！</h1>
+    <form method="GET"> <div style="width:100%;text-align:center" >
+      <button type="submit" class="btn btn-primary" name="Passenger">Passenger</button>
+      <button type="submit" class="btn btn-primary" name="Driver">Driver</button>
+    </div>
+    </form>
+
     {% else %}
     <h1>You have not logged in yet！</h1>
     {% endif %}
