--- a/ride/templates/login/base.html
+++ b/ride/templates/login/base.html
@@ -37,10 +37,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="my-nav">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/index/">index</a></li>
-{#              <li class="active"><a href="/Driver/">Driver</a></li>#}
-{#              <a class="navbar-brand" href="#">⇋</a >#}
-{#              <li class="active"><a href="/Passenger/">Passenger</a></li>#}
+              <li class="active"><a href="/Driver">Driver Page</a></li>
+              <li class="active"><a href="#">⇋</a></li>
+              <li class="active"><a href="/passenger">Passenger Page</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
               {% if request.session.is_login %}
