--- a/ride/templates/login/createRide.html
+++ b/ride/templates/login/createRide.html
@@ -1,58 +1,51 @@
-{% extends 'login/base.html' %} <!-- inheritance base -->
-{% load static %}
-{% block title %}Create Your Ride{% endblock %}
-{% block css %}
-    <link rel="stylesheet" href="{% static 'css/login.css' %}">
-{% endblock %}
+{% extends 'login/base.html' %}
 
-
+{% block title %}Ride Creation{% endblock %}
 {% block content %}
-{% if request.session.is_login %}
-  <div style="width:100%;text-align:center">
-<h1>Start Ride System</h1>
-<h2>Welcome to Start A Ride!</h2>
+    {% if request.session.is_login %}
+    <div class="container">
+        <div class="col-md-4 col-md-offset-4">
+          <form class='form-register' action="/createRide/" method="post">
 
-  <div style="width:100%;text-align:center">
-  <div class="col-md-4 col-md-offset-4">
-  <form method="POST" class="form-group">
+              {% if message %}
+                  <div class="alert alert-warning">{{ message }}</div>
+              {% endif %}
 
-    {% csrf_token %}
-{#   {{ride_form.as_p}} #}
-      <div class="form-group">
-    {{ ride_form.date.label_tag }}
-    {{ ride_form.date}}
-    </div>
-    <div class="form-group">
-    {{ ride_form.time.label_tag }}
-    {{ ride_form.time}}
-    </div>
-    <div class="form-group">
-    {{ ride_form.start.label_tag }}
-    {{ ride_form.start}}
-    </div>
-    <div class="form-group">
-    {{ ride_form.end.label_tag }}
-    {{ ride_form.end}}
-    </div>
-    <div class="form-group">
-    {{ ride_form.partySize.label_tag }}
-    {{ ride_form.partySize}}
-    </div>
-    <div class="form-group">
-    {{ ride_form.specialText.label_tag }}
-    {{ ride_form.specialText}}
-    </div>
-      <div class="form-group">
-    {{ ride_form.isSharable.label_tag }}
-    {{ ride_form.isSharable}}
-    </div>
+              {% csrf_token %}
+{#          or as_ul or as_table#}
+              {{ride_form.as_p}}
+{#              <div class="form-group">#}
+{#                  {{ ride_form.end.label_tag }}#}
+{#                  {{ ride_form.end}}#}
+{#              </div>#}
+{#              <div class="form-group">#}
+{#                  {{ ride_form.start.label_tag }}#}
+{#                  {{ ride_form.start }}#}
+{#              </div>#}
+{#              <div class="form-group">#}
+{#                  {{ ride_form.arrivalDate.label_tag }}#}
+{#                  {{ ride_form.arrivalDate }}#}
+{#              </div>#}
+{#              <div class="form-group">#}
+{#                  {{ ride_form.arrivalTime.label_tag }}#}
+{#                  {{ ride_form.arrivalTime }}#}
+{#              </div>#}
+{#              <div class="form-group">#}
+{#                  {{ ride_form.partySize.label_tag }}#}
+{#                  {{ ride_form.partySize }}#}
+{#              </div>#}
+{#              <div class="form-group">#}
+{#                  {{ ride_form.specialRequests.label_tag }}#}
+{#                  {{ ride_form.specialRequests }}#}
+{#              </div>#}
 
+              <button type="reset" class="btn btn-default pull-left">Reset</button>
+              <button type="submit" class="btn btn-primary pull-right">Submit</button>
 
-    <button type="submit" class="btn btn-primary">Create Ride</button>
-  </form>
-
-  </div>
-      {% else %}
-    <h1><div style="width:100%;text-align:center">You are not login, please do that!</h1>
+          </form>
+        </div>
+    </div> <!-- /container -->
+    {% else %}
+    <h1>You have not logged in yet！</h1>
     {% endif %}
 {% endblock %}
