--- a/ride/templates/login/register.html
+++ b/ride/templates/login/register.html
@@ -11,24 +11,8 @@
               {% endif %}
 
               {% csrf_token %}
+              <h2 class="text-center">Welcome to register</h2>
               {{register_form.as_p}}
-{#              <h2 class="text-center">Welcome to register</h2>#}
-{#              <div class="form-group">#}
-{#                  {{ register_form.username.label_tag }}#}
-{#                  {{ register_form.username}}#}
-{#              </div>#}
-{#              <div class="form-group">#}
-{#                  {{ register_form.password1.label_tag }}#}
-{#                  {{ register_form.password1 }}#}
-{#              </div>#}
-{#              <div class="form-group">#}
-{#                  {{ register_form.password2.label_tag }}#}
-{#                  {{ register_form.password2 }}#}
-{#              </div>#}
-{#              <div class="form-group">#}
-{#                  {{ register_form.email.label_tag }}#}
-{#                  {{ register_form.email }}#}
-{#              </div>#}
 
 
               <button type="submit" class="btn btn-primary pull-right">Submit</button>
