Driver set fixed

--- a/ride/templates/login/driverEdit.html
+++ b/ride/templates/login/driverEdit.html
@@ -19,14 +19,14 @@
         </thead>
         <tbody>
     <tr>
-  {% for driver_self in driver_set %}
+{#  {% for driver_self in driver_set %}#}
       <td><div style="width:100%;text-align:center">{{driver_self.vehicleType}}</div></td>
       <td><div style="width:100%;text-align:center">{{driver_self.licensePlateNumber}}</div></td>
       <td><div style="width:100%;text-align:center">{{driver_self.allowedPassengers}}</div></td>
       <td><div style="width:100%;text-align:center">{{driver_self.specialInfo}}</div></td>
 
     </tr>
-        {% endfor %}
+{#        {% endfor %}#}
         </tbody>
       </table>
 {#        register again part#}
