--- a/ride/templates/login/driverPage.html
+++ b/ride/templates/login/driverPage.html
@@ -25,7 +25,7 @@
         </thead>
         <tbody>
     <tr>
-  {% for driver_self in driver_set %}
+{#  {% for driver_self in driver_set %}#}
       <td><div style="width:100%;text-align:center">{{driver_self.vehicleType}}</div></td>
       <td><div style="width:100%;text-align:center">{{driver_self.licensePlateNumber}}</div></td>
       <td><div style="width:100%;text-align:center">{{driver_self.allowedPassengers}}</div></td>
@@ -37,7 +37,7 @@
       </div>
     </td>
     </tr>
-        {% endfor %}
+{#        {% endfor %}#}
         </tbody>
       </table>
 
