--- a/ride/templates/login/createRide.html
+++ b/ride/templates/login/createRide.html
@@ -16,7 +16,7 @@
               {{ride_form.as_p}}
 
               <button type="reset" class="btn btn-default pull-left">Reset</button>
-              <button type="submit" class="btn btn-primary pull-right">Submit</button>
+              <button type="submit" class="btn btn-primary pull-right">Create</button>
 
           </form>
         </div>
