--- a/ride/templates/login/jointEditRide.html
+++ b/ride/templates/login/jointEditRide.html
@@ -57,7 +57,7 @@
               <th><div style="width:100%;text-align:center"> not Sharable  </div></th>
           {% endif %}
           <th><div style="width:100%;text-align:center"> {{ride_item.specialRequests}}  </div></th>
-          <th><div style="width:100%;text-align:center"> {{ ride_item.vehicleTypeRequest }} </div></th>
+          <th><div style="width:100%;text-align:center"> {{ride_item.vehicleTypeRequest}}  </div></th>
           <th><div style="width:100%;text-align:center"> {{ride_item.status}} </div></th>
 
 
@@ -67,7 +67,7 @@
 {#        register again part#}
     <div class="container">
         <div class="col-md-4 col-md-offset-4">
-          <form class='form-register' action="/editRide/" method="post">
+          <form class='form-register' action="/jointEditRide/" method="post">
 
               {% if message %}
                   <div class="alert alert-warning">{{ message }}</div>
@@ -75,7 +75,7 @@
 
               {% csrf_token %}
 {#          or as_ul or as_table#}
-              {{ride_form.as_p}}
+              {{joint_ride_form.as_p}}
 
 
               <button type="reset" class="btn btn-default pull-left">Reset</button>
