--- a/ride/templates/login/passengerSearchRide.html
+++ b/ride/templates/login/passengerSearchRide.html
@@ -39,6 +39,7 @@
           <th><div style="width:100%;text-align:center"> Sharer name and party numbers </div></th>
           <th><div style="width:100%;text-align:center"> is Sharable </div></th>
           <th><div style="width:100%;text-align:center"> Special Requests </div></th>
+          <th><div style="width:100%;text-align:center"> Vehicle Type Requests </div></th>
           <th><div style="width:100%;text-align:center"> Status </div></th>
             <th><div style="width:100%;text-align:center"> Operation </div></th>
       <th></th>
@@ -76,6 +77,7 @@
               <th><div style="width:100%;text-align:center"> not Sharable  </div></th>
           {% endif %}
           <th><div style="width:100%;text-align:center"> {{ride_item.specialRequests}}  </div></th>
+          <th><div style="width:100%;text-align:center"> {{ ride_item.vehicleTypeRequest }} </div></th>
           <th><div style="width:100%;text-align:center"> {{ride_item.status}} </div></th>
 {#      open or claimed can be modify by owner#}
       {% if ride_item.status == 'open' or ride_item.status == 'claimed'%}
