--- a/ride/templates/login/driverPage.html
+++ b/ride/templates/login/driverPage.html
@@ -4,8 +4,8 @@
 {% block title %}Driver page{% endblock %}
 {% block content %}
     {% if request.session.is_login %}
-        <h1><div style="width:100%;text-align:center">Hello, Driver {{ request.session.user_name }}！Welcome back！！
-        </div></h1>
+        <h2><div style="width:100%;text-align:center">Hello, Driver {{ request.session.user_name }}！Welcome back！！
+        </div></h2>
 {#    <form method="GET"> <div style="width:100%;text-align:center" >#}
 {#      <button type="submit" class="btn btn-primary" name="Passenger">Passenger</button>#}
 {#      <button type="submit" class="btn btn-primary" name="Driver">Driver</button>#}
@@ -40,6 +40,160 @@
 {#        {% endfor %}#}
         </tbody>
       </table>
+
+        <h2><div style="width:100%;text-align:center"> Confirmed ride
+        </div></h2>
+
+        <table class="table table-bordered">
+
+        <thead>
+
+{#          <th><div style="width:100%;text-align:center"></div></th>#}
+          <th><div style="width:100%;text-align:center">Ride Owner</div></th>
+          <th><div style="width:100%;text-align:center"> Driver info</div></th>
+          <th><div style="width:100%;text-align:center">Arrival date</div></th>
+          <th><div style="width:100%;text-align:center"> Arrival time </div></th>
+          <th><div style="width:100%;text-align:center"> Starting  </div></th>
+          <th><div style="width:100%;text-align:center"> Destination </div></th>
+          <th><div style="width:100%;text-align:center"> Owner passenger numbers </div></th>
+          <th><div style="width:100%;text-align:center"> Sharer name and party numbers </div></th>
+          <th><div style="width:100%;text-align:center"> is Sharable </div></th>
+          <th><div style="width:100%;text-align:center"> Special Requests </div></th>
+          <th><div style="width:100%;text-align:center"> Vehicle Type Requests </div></th>
+          <th><div style="width:100%;text-align:center"> Status </div></th>
+            <th><div style="width:100%;text-align:center"> Operation </div></th>
+      <th></th>
+          </tr>
+        </thead>
+        <tbody>
+    <tr>
+  {% for ride_item in ride_list_confirmed %}
+      {% if ride_item.status != 'complete' %}
+              <td><div style="width:100%;text-align:center">{{ride_item.owner.name}}</div></td>
+      {% if ride_item.status == 'confirmed' %}
+          <td><div style="width:100%;text-align:center">Driver name:{{ride_item.driver.owner.name}}<br>
+              Vehicle Type: {{ ride_item.driver.vehicleType}}<br>
+              Licence Plate: {{ ride_item.driver.licensePlateNumber}}<br>
+              Allowed Passengers: {{ ride_item.driver.allowedPassengers}}<br>
+              Speical Text: {{ ride_item.driver.specialInfo }}
+          </div></td>
+          {% else %}
+            <td><div style="width:100%;text-align:center">Ride not confirmed yet</div></td>
+      {% endif %}
+          <td><div style="width:100%;text-align:center">{{ride_item.date}}</div></td>
+          <td><div style="width:100%;text-align:center">{{ride_item.time}}</div></td>
+          <th><div style="width:100%;text-align:center">{{ride_item.start}}</div></th>
+          <th><div style="width:100%;text-align:center"> {{ride_item.end}} </div></th>
+          <th><div style="width:100%;text-align:center">{{ride_item.partySize}} </div></th>
+          <th><div style="width:100%;text-align:center">
+              {% for joint_ride in ride_item.sharer.all %}
+              Sharer name {{joint_ride.owner.name}}<br>
+                  Sharer party number {{joint_ride.partySize}}<br>
+              {% endfor %}
+          </div></th>
+          {% if ride_item.isSharable %}
+              <th><div style="width:100%;text-align:center"> Sharable  </div></th>
+              {% else %}
+              <th><div style="width:100%;text-align:center"> not Sharable  </div></th>
+          {% endif %}
+          <th><div style="width:100%;text-align:center"> {{ride_item.specialRequests}}  </div></th>
+          <th><div style="width:100%;text-align:center"> {{ride_item.vehicleTypeRequest}}  </div></th>
+          <th><div style="width:100%;text-align:center"> {{ride_item.status}} </div></th>
+{#      open or claimed can be modify by owner#}
+      <td><div style="width:100%;text-align:center">
+        <form method="GET">
+        <button type="submit" class="btn btn-primary" name="Complete" value= {{ ride_item.id }}>Complete</button>
+        </form>
+      </div>
+    </td>
+
+
+    </tr>
+      {% endif %}
+
+        {% endfor %}
+        </tbody>
+      </table>
+
+
+        <h2><div style="width:100%;text-align:center">Available rides for your Vehicle
+        </div></h2>
+
+        <table class="table table-bordered">
+
+        <thead>
+
+{#          <th><div style="width:100%;text-align:center"></div></th>#}
+          <th><div style="width:100%;text-align:center">Ride Owner</div></th>
+          <th><div style="width:100%;text-align:center"> Driver info</div></th>
+          <th><div style="width:100%;text-align:center">Arrival date</div></th>
+          <th><div style="width:100%;text-align:center"> Arrival time </div></th>
+          <th><div style="width:100%;text-align:center"> Starting  </div></th>
+          <th><div style="width:100%;text-align:center"> Destination </div></th>
+          <th><div style="width:100%;text-align:center"> Owner passenger numbers </div></th>
+          <th><div style="width:100%;text-align:center"> Sharer name and party numbers </div></th>
+          <th><div style="width:100%;text-align:center"> is Sharable </div></th>
+          <th><div style="width:100%;text-align:center"> Special Requests </div></th>
+          <th><div style="width:100%;text-align:center"> Vehicle Type Requests </div></th>
+          <th><div style="width:100%;text-align:center"> Status </div></th>
+            <th><div style="width:100%;text-align:center"> Operation </div></th>
+      <th></th>
+          </tr>
+        </thead>
+        <tbody>
+    <tr>
+  {% for ride_item in ride_available_list %}
+      {% if ride_item.status != 'complete' %}
+              <td><div style="width:100%;text-align:center">{{ride_item.owner.name}}</div></td>
+      {% if ride_item.status == 'confirmed' %}
+          <td><div style="width:100%;text-align:center">Driver name:{{ride_item.driver.owner.name}}<br>
+              Vehicle Type: {{ ride_item.driver.vehicleType}}<br>
+              Licence Plate: {{ ride_item.driver.licensePlateNumber}}<br>
+              Allowed Passengers: {{ ride_item.driver.allowedPassengers}}<br>
+              Speical Text: {{ ride_item.driver.specialInfo }}
+          </div></td>
+          {% else %}
+            <td><div style="width:100%;text-align:center">Ride not confirmed yet</div></td>
+      {% endif %}
+          <td><div style="width:100%;text-align:center">{{ride_item.date}}</div></td>
+          <td><div style="width:100%;text-align:center">{{ride_item.time}}</div></td>
+          <th><div style="width:100%;text-align:center">{{ride_item.start}}</div></th>
+          <th><div style="width:100%;text-align:center"> {{ride_item.end}} </div></th>
+          <th><div style="width:100%;text-align:center">{{ride_item.partySize}} </div></th>
+          <th><div style="width:100%;text-align:center">
+              {% for joint_ride in ride_item.sharer.all %}
+              Sharer name {{joint_ride.owner.name}}<br>
+                  Sharer party number {{joint_ride.partySize}}<br>
+              {% endfor %}
+          </div></th>
+          {% if ride_item.isSharable %}
+              <th><div style="width:100%;text-align:center"> Sharable  </div></th>
+              {% else %}
+              <th><div style="width:100%;text-align:center"> not Sharable  </div></th>
+          {% endif %}
+          <th><div style="width:100%;text-align:center"> {{ride_item.specialRequests}}  </div></th>
+          <th><div style="width:100%;text-align:center"> {{ride_item.vehicleTypeRequest}}  </div></th>
+          <th><div style="width:100%;text-align:center"> {{ride_item.status}} </div></th>
+{#      open or claimed can be modify by owner#}
+      <td><div style="width:100%;text-align:center">
+{#          {% if ride_item.status == 'open' %}#}
+        <form method="GET">
+        <button type="submit" class="btn btn-primary" name="Confirmed" value= {{ ride_item.id }}>Confirm</button>
+        </form>
+{#              {% else %}#}
+{#              #}
+{#              {% endif %}#}
+      </div>
+    </td>
+
+
+    </tr>
+      {% endif %}
+
+        {% endfor %}
+        </tbody>
+      </table>
+
 
     {% else %}
     <h1>You have not logged in yet！</h1>
